--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "require": {
         "yiisoft/yii2": "*",
         "yiisoft/yii2-authclient": "*",
-        "facebook/php-sdk": "*"
+        "facebook/php-sdk": "*",
+        "google/apiclient": "*"
     },
     "autoload": {
         "psr-4": {
