--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "yiisoft/yii2": "*",
         "yiisoft/yii2-authclient": "*",
-        "facebook/php-sdk-v4": "4.1.*@dev",
+        "facebook/php-sdk-v4": "~5.0@dev"
         "google/apiclient": "*"
     },
     "autoload": {
